--- a/vintageshop/shop/templates/shop/admin_dashboard.html
+++ b/vintageshop/shop/templates/shop/admin_dashboard.html
@@ -25,6 +25,8 @@
 
     <a href="{% url 'logout' %}"><button>Logout</button></a>
 
+    <a href="{% url 'admin_chat' %}"><button>จัดการแชท</button></a>
+    
     <h2>เพิ่มสินค้า</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
