--- a/vintageshop/shop/templates/shop/order_success.html
+++ b/vintageshop/shop/templates/shop/order_success.html
@@ -8,7 +8,7 @@
     <title>สั่งซื้อสำเร็จ</title>
 </head>
 <body>
-    <h1>ขอบคุณสำหรับการสั่งซื้อ!</h1>
+    <h2>สรุปคำสั่งซื้อ</h2>
     <p>หมายเลขคำสั่งซื้อ: {{ order.id }}</p>
     <p>วันที่: {{ order.created_at }}</p>
 
