--- a/vintageshop/shop/templates/shop/admin_dashboard.html
+++ b/vintageshop/shop/templates/shop/admin_dashboard.html
@@ -26,7 +26,9 @@
     <a href="{% url 'logout' %}"><button>Logout</button></a>
 
     <a href="{% url 'admin_chat' %}"><button>จัดการแชท</button></a>
-    
+
+    <a href="{% url 'admin_order_list' %}"><button>จัดการคำสั่งซื้อ</button></a>
+
     <h2>เพิ่มสินค้า</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
