--- a/vintageshop/shop/templates/shop/product_list.html
+++ b/vintageshop/shop/templates/shop/product_list.html
@@ -39,7 +39,7 @@
         <p>สวัสดี, {{ user.username }}!  
             <a href="{% url 'logout' %}"><button>ออกจากระบบ</button></a>
             <a href="{% url 'edit_profile' %}"><button>แก้ไขโปรไฟล์</button></a>
-            <a href="{% url 'add_address' %}"><button>เพิ่มที่อยู่</button></a>
+            <a href="{% url 'address_list' %}"><button>เพิ่มที่อยู่</button></a>
             <a href="{% url 'payment_status' %}"><button>📋 ตรวจสอบสถานะคำสั่งซื้อ</button></a>
         </p>
         <a href="{% url 'user_chat' %}"><button>Chat กับแอดมิน</button></a> <!-- ปุ่มแชท -->
